# designpatterns

./: README.md
Bridge/: Abstraction.cpp  Abstraction.h  AbstractionImplement.cpp  AbstractionImplement.h  CMakeLists.txt  main.cpp
Factory/: AbstractFactory.hpp  AbstractFactoryTest.hpp  CMakeLists.txt  MethodFactory.hpp  MethodFactoryTest.hpp  Shoes.hpp  SimpleFactory.hpp  SimpleFactoryTest.hpp  SingletonFactory.hpp  SingletonFactoryTest.hpp  main.cpp
Proxy/: Proxy.cpp
