CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(bridge_test)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -pthread")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/lib)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
ADD_EXECUTABLE(test_demo ${SRC_LIST})
